2011-01-29  Carsten Haitzler (The Rasterman)

        1.0.0 release

2011-02-25  Cedric BAIL

	* Fix build with DSO.

2011-03-19  Mike Blumenkrantz

        * Fix crash in e-notify-send when invalid DBUS_SESSION_BUS_ADDRESS is specified

2011-04-27  Carsten Haitzler (The Rasterman)

        * Fix bug when app has no idle time (always busy), idlers
        can't run to process edbus dispatches. Move this to an idle
        enterer that wil be run.

2011-07-26  Libor Zoubek <lzoubek@jezzovo.net>

        * Add support for notification protocol 1.2 into e_dbus by
        adding spec version string support.